src/development/main/default/objects/Opportunity/fields/Rebase10__c.field-meta.xml
<CustomField>
    <fullName>Rebase10__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description</description>
    <inlineHelpText>Help Text</inlineHelpText>
    <label>Rebase10</label>
    <type>Checkbox</type>
</CustomField>