src/development/main/default/objects/Opportunity/fields/Rebase1__c.field-meta.xml
<CustomField>
    <fullName>Rebase1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description mod in Dev1</description>
    <inlineHelpText>Help Text</inlineHelpText>
    <label>Rebase1</label>
    <type>Checkbox</type>
</CustomField>